# TheWorldAvatar

./: .gitattributes  .gitignore  .mlc_config.json  404.html  CITATION.cff  LICENSE.txt  README.md  combine_then_split.py  constants.py  convert_model.py  docker-compose.local.yaml  evaluate.py  finetune.py  flask-variables.env  generate.py  generate_graph_query.py  generate_query_graph.py  git-filter-repo  index.html  inference.py  main_applClient.txt  model_utils.py  objects.inv  owl2lpg.py  paraphrase.py  repo-moving-tools.md  requirements.txt  triton-variables.env  unmerged-branch-checker.sh  utils.py  viz.py
QuestionAnswering/MARIE_SEQ2SEQ/deployment/flask/: Dockerfile  pyproject.toml
QuestionAnswering/MARIE_SEQ2SEQ/deployment/flask/marie/: __init__.py
QuestionAnswering/MARIE_SEQ2SEQ/deployment/flask/marie/resources/: sample_questions.json
QuestionAnswering/MARIE_SEQ2SEQ/deployment/flask/marie/services/: kg_client.py  preprocessing.py  translation_client.py
QuestionAnswering/MARIE_SEQ2SEQ/deployment/flask/marie/static/css/: custom.css  styles.css
QuestionAnswering/MARIE_SEQ2SEQ/deployment/flask/marie/static/js/: script.js
QuestionAnswering/MARIE_SEQ2SEQ/deployment/flask/tests/services/: test_preprocessing.py
QuestionAnswering/QA_SEQ2SEQ/deployment/flask/: Dockerfile  README.md  pyproject.toml
QuestionAnswering/QA_SEQ2SEQ/deployment/flask/marie/resources/: sample_questions.json
QuestionAnswering/QA_SEQ2SEQ/deployment/flask/marie/services/: __init__.py  preprocessing.py
QuestionAnswering/QA_SEQ2SEQ/deployment/flask/marie/templates/: index.html
(+28121 files in other folders)
