[project]
name = "marie"
version = "1.0.0"
description = "KGQA system for chemistry."
maintainers = [{name = "Dan Tran", email = "nmdt2@cam.ac.uk"}]
dependencies = [
    "flask",
    "tritonclient[http]",
    "SPARQLWrapper",
    "unit_parse",
    "pint"
]

[project.optional-dependencies]
test = ["pytest"]

[tool.flit.sdist]
include = [
    "tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["marie", "tests"]